# sank-ai-competitive-intelligence

./: README.md  pyproject.toml
config/: reference_corpus.example.yaml  watchlist.example.yaml
config/domains/: competitive_intelligence.yaml  creator_comparison.yaml
n8n/: sank_n8n_workflow_CLOUD.json
sample_data/: sample_changelog.html
src/sank/: __init__.py  agents.py  cli.py  config.py  exceptions.py  fetch.py  llm_client.py  models.py  pipeline.py  vector_store.py
src/sank.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_agents.py  test_cli.py  test_fetch.py  test_llm_client.py  test_models.py  test_pipeline.py  test_vector_store.py
