[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sank"
version = "0.1.0"
description = "AI agent that watches public signals (competitors, creators, anything) and briefs you daily against your own reference corpus, using semantic search instead of keywords."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "tenacity>=8.2",
    "click>=8.1",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
pinecone = ["pinecone>=5.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
sank = "sank.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
